# AutoMiny

./: .bashrc  .gitignore  72-serial.rules  README.md  autostart.sh  cmake-wrapper.sh  copy.sh  copy.sh~  scratch.cpp
catkin_ws/: .gitignore  replace.sh  (+2 more)
catkin_ws/src/arduino_communication/: CMakeLists.txt  package.xml
catkin_ws/src/arduino_communication/launch/: ArduinoCommunication.launch
catkin_ws/src/arduino_communication/src/: ArduinoCommunication.cpp  ArduinoCommunication.h  ArduinoCommunicationNode.cpp  COBS.h  MessageType.h
catkin_ws/src/auto_stop/: CMakeLists.txt  package.xml
catkin_ws/src/auto_stop/launch/: auto_stop.launch
catkin_ws/src/auto_stop/src/: auto_stop.cpp
catkin_ws/src/autominy/: CMakeLists.txt  package.xml
catkin_ws/src/autominy/launch/: Core.launch  Live.launch  Logged.launch  OneSimulatedVehicle.launch  Record.launch  Sim.launch  Simulated.launch  ThreeSimulatedVehicles.launch
catkin_ws/src/autominy/params/: ekf_localization.yaml
catkin_ws/src/autominy/rviz/: live.rviz
catkin_ws/src/autominy_msgs/: .gitignore  CMakeLists.txt  README.md  package.xml
catkin_ws/src/autominy_msgs/msg/: NormalizedSpeedCommand.msg  NormalizedSteeringCommand.msg  Obstacle.msg  Obstacles.msg  Plot.msg  Speed.msg  SpeedCommand.msg  SpeedPWMCommand.msg  SteeringAngle.msg  SteeringCommand.msg  SteeringFeedback.msg  SteeringPWMCommand.msg  Tick.msg  TrafficLight.msg  TrafficLightState.msg  Trajectory.msg  TrajectoryPoint.msg  Voltage.msg
catkin_ws/src/autominy_msgs/srv/: SetTrafficLightState.srv
catkin_ws/src/bno055_usb_stick/: CMakeLists.txt  package.xml
catkin_ws/src/bno055_usb_stick/launch/: BNO055.launch
catkin_ws/src/bno055_usb_stick/src/: bno055_usb_stick_node.cpp
catkin_ws/src/bno055_usb_stick_msgs/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/bno055_usb_stick_msgs/msg/: CalibrationStatus.msg  EulerAngles.msg  Output.msg
catkin_ws/src/car_description/: CMakeLists.txt  package.xml
catkin_ws/src/car_description/launch/: description.launch  description_test.launch  spawn_car.launch
catkin_ws/src/car_description/meshes/: board.dae  laser.dae  wheel.dae
catkin_ws/src/car_description/urdf/: _d435.urdf.xacro  car.xacro  common.xacro  rplidar_a2.xacro
catkin_ws/src/car_robot_model/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/car_robot_model/launch/: car_robot_model.launch
catkin_ws/src/car_robot_model/meshes/: IMU.stl  RP-LIDAR.stl  camera_board.stl  chassis.stl  creative_camera.stl  gps_camera.stl  rplidar_a2.dae  sensor_board.stl  wheel.stl
catkin_ws/src/car_robot_model/urdf/: car.xacro
catkin_ws/src/emergency_stop/: CMakeLists.txt  nodelet_plugins.xml  package.xml
catkin_ws/src/emergency_stop/cfg/: EmergencyStop.cfg
catkin_ws/src/emergency_stop/launch/: EmergencyStop.launch
catkin_ws/src/emergency_stop/src/: EmergencyStop.cpp  EmergencyStop.py  EmergencyStopBackwardUtils.py  EmergencyStopForwardUtils.py  EmergencyStopNode.cpp  EmergencyStopNodelet.cpp  EmergencyStopSharedUtils.py  EmergencyStopUtils.py
catkin_ws/src/fub_modelcar_tools/: CMakeLists.txt  README  package.xml
catkin_ws/src/fub_modelcar_tools/example/: test.cpp
catkin_ws/src/fub_modelcar_tools/src/: xml_write_read.cpp
catkin_ws/src/fub_speed_calibration/: CMakeLists.txt  package.xml
catkin_ws/src/fub_speed_calibration/cfg/: SpeedCalibration.xml  SpeedCalibration_111.xml
catkin_ws/src/fub_speed_calibration/launch/: SpeedCalibration.launch  SpeedTickCalibration.launch  speed_calibration.launch
catkin_ws/src/fub_speed_calibration/src/: SpeedCalibration.cpp  SpeedCalibration.h  SpeedCalibrationData.cpp  SpeedCalibrationData.h  SpeedCalibrationNode.cpp  SpeedTickCalibration.cpp  SpeedTickCalibration.h  SpeedTickCalibrationNode.cpp  speed_calibration.cpp  speed_calibration.h  speed_calibration_node.cpp
catkin_ws/src/fub_steering_calibration/: CMakeLists.txt  README  package.xml
catkin_ws/src/fub_steering_calibration/scripts/: SteerAngleActuator.xml  SteerAngleActuator_102.xml  SteerAngleActuator_107.xml  SteerAngleActuator_110.xml  SteerAngleActuator_112.xml  SteerAngleActuator_151.xml  SteerAngleActuator_num_20.xml  angle_calibrator.py  angle_calibrator_online.py  calibration.sh  drive_angle.py  steering_0_01.pkl  steering_0_02.pkl  steering_120_01.pkl  steering_120_02.pkl  steering_140_01.pkl  steering_140_02.pkl  steering_150_01.pkl  steering_150_02.pkl  steering_160_01.pkl  steering_160_02.pkl  steering_180_01.pkl  steering_180_02.pkl  steering_30_01.pkl  steering_30_02.pkl  steering_60_01.pkl  steering_60_02.pkl  steering_90_01.pkl  steering_90_02.pkl  steering_actuator_calibration.py  steering_calibration_actuator.ipynb  test.py  test2.py
catkin_ws/src/hardware_calibration/: CMakeLists.txt  nodelet_plugins.xml  package.xml
catkin_ws/src/hardware_calibration/cfg/: HardwareCalibration.cfg
catkin_ws/src/hardware_calibration/launch/: HardwareCalibration.launch
catkin_ws/src/hardware_calibration/src/: HardwareCalibrationNode.cpp  HardwareCalibrationNodelet.cpp
catkin_ws/src/hd_map/: CMakeLists.txt  package.xml
catkin_ws/src/hd_map/scripts/: control.py  generate_vectorfield.py  state_machine.py
catkin_ws/src/hd_map/src/: HDMap.cpp  Lane.cpp  LaneGroup.cpp  LaneGroupConnector.cpp  Polyline2D.cpp  Polyline3D.cpp  Road.cpp  Util.h  Visualization.cpp  Visualization.h
catkin_ws/src/jsk_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
catkin_ws/src/jsk_rviz_plugin/scripts/: publish_steering.py
catkin_ws/src/jsk_rviz_plugin/src/: camera_info_display.h  overlay_camera_display.cpp  overlay_camera_display.h  overlay_utils.cpp  pie_chart_display.cpp  pie_chart_display.h  plotter_2d_display.cpp  plotter_2d_display.h
catkin_ws/src/lanelet_force_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/lanelet_force_navigation/scripts/: generate_map.py  generate_vectorfield.py
catkin_ws/src/lidar_pose_estimation/: CMakeLists.txt  nodelet_plugins.xml  package.xml
catkin_ws/src/low_voltage_shutdown/: CMakeLists.txt  nodelet_plugins.xml  package.xml
catkin_ws/src/manual_control/: CMakeLists.txt  package.xml
(+1848 files in other folders)
