<?xml version="1.0"?>
<package format="2">
  <name>arduino_communication</name>
  <version>0.0.0</version>
  <description>Arduino communication using COBS</description>

  <maintainer email="stephan.sundermann@fu-berlin.de">Stephan Sundermann</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>autominy_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>serial</depend>

</package>
