<?xml version="1.0"?>
<package format="3">
  <name>arduino_communication</name>
  <version>0.0.0</version>
  <description>Arduino communication using COBS</description>

  <maintainer email="stephan.sundermann@fu-berlin.de">Stephan Sundermann</maintainer>


  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>autominy_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>serial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
