<?xml version="1.0"?>
<package format="2">
  <name>autominy</name>
  <version>0.0.1</version>
  <description>Startup project</description>

  <maintainer email="s.sundermann@fu-berlin.de">Stephan Sundermann</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>ZARGOL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rplidar_ros</depend>
  <depend>robot_localization</depend>
  <depend>multimaster_fkie</depend>

  <export>
  </export>
</package>
