<?xml version="1.0"?>
<package format="3">
    <name>autominy_msgs</name>
    <version>0.0.1</version>
    <description>Brief description what this package is doing</description>

    <maintainer email="s.sundermann@fu-berlin.de">Autonomos-Labs, FU Berlin</maintainer>

    <license>proprietary</license>

    <url type="website">https://www.autonomos-labs.de/</url>

    <author email="s.sundermann@fu-berlin.de">Autonomos-Labs, FU Berlin</author>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <depend>std_msgs</depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <depend>geometry_msgs</depend>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
