<?xml version="1.0"?>
<package>
  <name>car_robot_model</name>
  <version>0.0.1</version>
  <description>Description and configuration files for the model car</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <maintainer email="AutoModelCar@todo.todo">AutoModelCar</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPL</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!--<url type="website">http://wiki.ros.org/car_robot_model</url>-->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- ****************************************************************** -->
  <!--                 Place build dependencies here                      -->
  <!-- ****************************************************************** -->
  <!--   <build_depend>message_generation</build_depend> -->

  <!-- ****************************************************************** -->
  <!--                   Place run dependencies here                      -->
  <!-- ****************************************************************** -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
