<?xml version="1.0"?>
<package format="3">
    <name>emergency_stop</name>
    <version>0.0.1</version>
    <description>Emergency stop using LiDAR</description>

    <maintainer email="s.sundermann@fu-berlin.de">Autonomos-Labs, FU Berlin</maintainer>

    <license>proprietary</license>

    <url type="website">https://www.autonomos-labs.de/</url>

    <author email="s.sundermann@fu-berlin.de">Autonomos-Labs, FU Berlin</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp_components</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>autominy_msgs</depend>

    <!-- export of nodelet definition XML -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
