<?xml version="1.0"?>
<package format="2">
  <name>fub_modelcar_tools</name>
  <version>0.2.3</version>
  <description>The libraries package</description>

  <maintainer email="boroujeni@fu-berlin.de">Zahra Boroujeni</maintainer>

  <license>BSD</license>

  <author>Zahra Boroujeni</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
