<?xml version="1.0"?>
<package format="2">
  <name>fub_steering_calibration</name>
  <version>0.0.1</version>
  <description>The steering calibration package</description>

  <maintainer email="boroujeni@fu-berlin.de">Zahra Boroujeni</maintainer>

  <license>BSD</license>

  <author>?</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>



</package>
